* default artifact locator picks up Maven 2 ~/.m2/settings.xml localRepository configuration
* DebugUtils uses a degradable logger to properly report error messages when the logging implementation is misconfigured
* BundleDelegatingClassLoader uses a degradable logger to properly report error messages when the logging implementation
  is misconfigured

Changes in version 1.0 RC2 (2008-01-11)
---------------------------------------

General
* removed deprecated methods
* circular references between service importers, exporter and listeners are now supported
* distributable bundles include Apache 2 license (META-INF/license.txt and META-INF/notice.txt)
* all integration tests have been moved under integration-test/ folder
* by default, the samples and integration tests are not executed (use Maven profiles to include them)
* Maven 2.0.7 is required for properly building the project under JDK 1.6
* Knopflerfish 2.0.3 is required for correctly building and running Spring-DM

Package org.springframework.osgi
* updated spring-osgi.xsd Tservice type to properly reflect OsgiServiceFactoryBean package
* updated spring-osgi.xsd list, set elements to properly reflect OsgiServiceCollectionFactoryBean package               

* updated bundles symbolic name to follow Spring bundle conventions (org.springframework.bundle.osgi
  instead of org.springframework.osgi.bundle)

Package org.springframework.osgi.bundle
* removed deprecated method BundleFactoryBean#setClassloader

Package org.springframework.osgi.config
* OsgiConfigDefinitionParser visibility changed from public to default
* OsgiDefaultsDefinition visibility changed from public to default
* ParserUtils visibility changed from public to default

Package org.springframework.osgi.context
* AbstractDelegatedExecutionApplicationContext throws clearer exception when the mandatory BundleContext is not set

Package org.springframework.osgi.extender